Adjust the width of the hero image overlay panel of index.html to fix the text contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ h1 {
 }
 
 #text-overlay {
-  width: 50%;
+  width: 30%;
   height: 400px;
 }
 
@@ -84,7 +84,7 @@ h1 {
   width: 70%;
   margin: 0 auto;
 
-  padding-top: 50px;
+  padding-top: 25px;
 }
 
 #text-overlay > p {
